--- a/webroot/less/bootswatch.less
+++ b/webroot/less/bootswatch.less
@@ -1,180 +1,185 @@
-// Cerulean 2.3.2
+// Flatly 3.1.0
 // Bootswatch
 // -----------------------------------------------------
 
+@import url("//fonts.googleapis.com/css?family=Lato:400,700,400italic");
 
-// TYPOGRAPHY
-// -----------------------------------------------------
+// Navbar =====================================================================
 
-@import url(//fonts.googleapis.com/css?family=Telex);
+// Buttons ====================================================================
 
-// SCAFFOLDING
-// -----------------------------------------------------
-
-// NAVBAR
-// -----------------------------------------------------
-
-.navbar {
-
-	.brand {
-		padding: 14px 20px 16px;
-		font-family: @headingsFontFamily;
-		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-	}
-
-	li {
-		line-height: 20px;
-	}
-
-	.nav > li > a {
-		padding: 16px 10px 14px;
-		font-family: @headingsFontFamily;
-		text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-	}
-
-	.search-query {
-		border: 1px solid darken(@linkColor, 10%);
-		line-height: normal;
-	}
-
-	.navbar-text {
-		padding: 19px 10px 18px;
-		line-height: 13px;
-		color: rgba(0, 0, 0, 0.5);
-		text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.3);
-	}
-
-	&-inverse {
-
-		.navbar-search .search-query {
-			color: @textColor;
-		}
-	}
+.btn:active {
+  .box-shadow(none);
 }
 
-@media (max-width: @navbarCollapseWidth) {
-
-	.navbar .nav-collapse {
-
-		.nav li > a {
-
-			font-family: @headingsFontFamily;
-			font-weight: normal;
-			color: @white;
-			text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.2);
-
-			&:hover {
-				background-color: #2B7CAC;
-			}
-		}
-
-		.nav .active > a {
-			.box-shadow(none);
-			background-color: #2B7CAC;
-		}
-
-		.dropdown-menu li > a:hover,
-		.dropdown-menu li > a:focus,
-		.dropdown-submenu:hover > a {
-			background-image: none;
-		}
-
-		.navbar-form,
-		.navbar-search {
-			border: none;
-		}
-
-		.nav-header {
-			color: #2B7CAC;
-		}
-	}
-
-	.navbar-inverse .nav-collapse {
-
-		.nav li > a {
-			color: @navbarInverseLinkColor;
-
-			&:hover {
-				background-color: rgba(0, 0, 0, 0.1);
-			}
-		}
-
-		.nav .active > a,
-		.nav > li > a:hover,
-		.dropdown-menu a:hover {
-			background-color: rgba(0, 0, 0, 0.1) !important;
-		}
-	}
+.btn-group.open .dropdown-toggle {
+  .box-shadow(none);
 }
 
-div.subnav {
+// Typography =================================================================
 
-	font-family: @headingsFontFamily;
-	text-shadow: 1px 1px 0 rgba(255, 255, 255, 0.2);
-
-	&-fixed {
-		top: @navbarHeight + 1;
-	}
+.text-primary,
+.text-primary:hover {
+  color: @brand-primary;
 }
 
-// NAV
-// -----------------------------------------------------
+.text-success,
+.text-success:hover {
+  color: @brand-success;
+}
 
-// BUTTONS
-// -----------------------------------------------------
+.text-danger,
+.text-danger:hover {
+  color: @brand-danger;
+}
 
-.btn {
-  #gradient > .vertical-three-colors(@white, @white, 5%, darken(@white, 0%));
-  @shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-  .box-shadow(@shadow);
+.text-warning,
+.text-warning:hover {
+  color: @brand-warning;
+}
 
-  &:hover {
-  	background-position: 0 0;
+.text-info,
+.text-info:hover {
+  color: @brand-info;
+}
+
+// Tables =====================================================================
+
+.table {
+
+  tr.success,
+  tr.warning,
+  tr.danger {
+    color: #fff;
+  }
+
+  > thead > tr > th,
+  > tbody > tr > th,
+  > tfoot > tr > th,
+  > thead > tr > td,
+  > tbody > tr > td,
+  > tfoot > tr > td {
+    border: none;
+  }
+
+  &-bordered > thead > tr > th,
+  &-bordered > tbody > tr > th,
+  &-bordered > tfoot > tr > th,
+  &-bordered > thead > tr > td,
+  &-bordered > tbody > tr > td,
+  &-bordered > tfoot > tr > td {
+    border: 1px solid @table-border-color;
   }
 }
 
-.btn-primary {
-  .buttonBackground(lighten(@btnPrimaryBackground, 5%), @btnPrimaryBackground);
+// Forms ======================================================================
+
+.form-control,textarea.form-control,
+input[type="text"],
+input[type="password"],
+input[type="datetime"],
+input[type="datetime-local"],
+input[type="date"],
+input[type="month"],
+input[type="time"],
+input[type="week"],
+input[type="number"],
+input[type="email"],
+input[type="url"],
+input[type="search"],
+input[type="tel"],
+input[type="color"],
+.uneditable-input {
+  border-width: 2px;
+  .box-shadow(none);
+
+  &:focus {
+    .box-shadow(none);
+  }
 }
 
-.btn-info {
-  .buttonBackground(lighten(@btnInfoBackground, 5%), @btnInfoBackground);
+.has-warning {
+  .help-block,
+  .control-label {
+    color: @brand-warning;
+  }
+
+  .form-control,
+  .form-control:focus {
+    border: 2px solid @brand-warning;
+  }
 }
 
-.btn-success {
-  .buttonBackground(lighten(@btnSuccessBackground, 5%), @btnSuccessBackground);
+.has-error {
+  .help-block,
+  .control-label {
+    color: @brand-danger;
+  }
+
+  .form-control,
+  .form-control:focus {
+    border: 2px solid @brand-danger;
+  }
 }
 
-.btn-warning {
-  .buttonBackground(lighten(@btnWarningBackground, 5%), @btnWarningBackground);
+.has-success {
+  .help-block,
+  .control-label {
+    color: @brand-success;
+  }
+
+  .form-control,
+  .form-control:focus {
+    border: 2px solid @brand-success;
+  }
 }
 
-.btn-danger {
-  .buttonBackground(lighten(@btnDangerBackground, 5%), @btnDangerBackground);
+// Navs =======================================================================
+
+.nav {
+  .open > a,
+  .open > a:hover,
+  .open > a:focus {
+    border-color: transparent;
+  }
 }
 
-.btn-inverse {
-  .buttonBackground(lighten(@btnInverseBackground, 5%), @btnInverseBackground);
+.pager {
+  a,
+  a:hover {
+    color: #fff;
+  }
+
+  .disabled {
+    &>a,
+    &>a:hover,
+    &>a:focus,
+    &>span {
+      background-color: @pagination-disabled-bg;
+    }
+  }
 }
 
-// TABLES
-// -----------------------------------------------------
+// Indicators =================================================================
 
-// FORMS
-// -----------------------------------------------------
+.alert {
 
-// DROPDOWNS
-// -----------------------------------------------------
-
-// ALERTS, LABELS, BADGES
-// -----------------------------------------------------
-
-// MISC
-// -----------------------------------------------------
-
-i[class^="icon-"]{
-	opacity: 0.8;
+  a,
+  .alert-link {
+    color: #fff;
+    text-decoration: underline;
+  }
 }
 
-// MEDIA QUERIES
-// -----------------------------------------------------
+// Progress bars ==============================================================
+
+.progress {
+  height: 10px;
+  .box-shadow(none);
+}
+
+// Containers =================================================================
+
+.well {
+  .box-shadow(none);
+}
